# voicebridge

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  PRIVACY.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  dev  mcp.json  mcp_config.json  plugin.json  pyproject.toml
.agents/: mcp_config.json
.agents/plugins/: marketplace.json
.agents/skills/: jump-in  start-talking  voice-code  voice-interrupt  voice-settings  wrap-up
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: voice-code.md
.codex-plugin/: plugin.json
.cursor/: mcp.json
.cursor-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-verify.yml
cadence_code/: __init__.py  cli.py  config.py  models.py
cadence_code/audio/: capture.py  playback.py  preflight.py
cadence_code/mcp/: runtime.py  server.py
cadence_code/providers/: chatterbox_tts.py  kokoro_tts.py  moonshine_stt.py  output.py  parakeet_stt.py  pocket_tts.py  qwen_tts.py  registry.py  whisper_stt.py
commands/: jump-in.md  start-talking.md  voice-code.md  voice-interrupt.md  voice-settings.md  wrap-up.md
config/: com.voicebridge.daemon.plist.template  default_config.toml
hooks/: hooks.json  session_end.sh
scripts/: generate_manifests.py  host_manifests.py  validate_plugin.py  verify_distribution.py
skills/jump-in/: SKILL.md
skills/jump-in/agents/: openai.yaml
skills/start-talking/: SKILL.md
skills/start-talking/agents/: openai.yaml
skills/start-talking/scripts/: setup
skills/voice-code/: SKILL.md
skills/voice-code/agents/: openai.yaml
skills/voice-interrupt/: SKILL.md
skills/voice-interrupt/agents/: openai.yaml
skills/voice-settings/: SKILL.md
skills/voice-settings/agents/: openai.yaml
skills/wrap-up/: SKILL.md
skills/wrap-up/agents/: openai.yaml
tests/: test_bootstrap.py  test_capture.py  test_ci_contracts.py  test_config.py  test_dev_cli.py  test_kokoro_frontend.py  test_mcp_stdio.py  test_models.py  test_playback.py  test_plugin_contracts.py  test_preflight.py  test_providers.py  test_runtime.py  test_server.py
tests/fixtures/: noisy_stdio_server.py
voicebridge/: __init__.py  _compat.py  cli.py  config.py  models.py
voicebridge/audio/: __init__.py  capture.py  playback.py  preflight.py
voicebridge/daemon/: audio_in.py  audio_out.py  lifecycle.py  server.py  state.py  summarizer.py  transcript.py
voicebridge/hooks/: on_stop.sh  on_subagent_stop.sh
voicebridge/mcp/: runtime.py  server.py
voicebridge/providers/: base.py  chatterbox_tts.py  kokoro_tts.py  moonshine_stt.py  parakeet_stt.py  pocket_tts.py  qwen_tts.py  registry.py  whisper_stt.py
