[project]
name = "voicebridge"
version = "0.2.1"
description = "Fully local voice companion for Claude Code (Apple Silicon / MLX)"
requires-python = ">=3.11"
dependencies = [
  "mlx-audio>=0.4.4",
  # Kokoro's text frontend needs these, but mlx-audio doesn't declare them --
  # misaki[en]'s own extra pins an old spacy/thinc/blis chain that fails to
  # build on Python 3.13 (confirmed still true), so these are declared loose
  # here instead and left for pip to resolve modern prebuilt wheels for.
  # Two of these must be the exact packages misaki's own [en] extra would
  # have pulled in, not generic equivalents: misaki>=0.9's espeak.py imports
  # espeakng-loader unconditionally and calls a phonemizer-fork-only API
  # (EspeakWrapper.set_data_path) -- plain `phonemizer` (no "-fork") lacks
  # that method and fails at import time.
  "misaki",
  "spacy",
  "num2words",
  "phonemizer-fork",
  "espeakng-loader",
  "sounddevice>=0.5",
  "numpy>=1.26",
  # Real frame-classifying voice activity detection (Google's WebRTC VAD),
  # replacing a naive RMS energy threshold -- this is the single biggest
  # factor in voicemode's listening feeling more reliable than an amplitude
  # cutoff. "-wheels" is a maintained fork with importlib.metadata support
  # (no pkg_resources dependency), matching what voicemode itself uses.
  "webrtcvad-wheels>=2.0.14",
  "pydantic>=2.9",
  "mcp>=1.2",
  "click>=8.1",
]

[project.scripts]
voicebridge = "voicebridge.cli:main"
voicebridge-mcp = "voicebridge.mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voicebridge*"]
