[project]
name = "voicebridge"
version = "0.2.5"
description = "Local Kokoro speech and Parakeet transcription for Claude Code on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Michael Li" },
]
keywords = [
  "apple-silicon",
  "claude-code",
  "mlx",
  "speech-to-text",
  "text-to-speech",
  "voice-assistant",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "mlx-audio>=0.4.4",
  # Kokoro's text frontend needs these, but mlx-audio doesn't declare them --
  # misaki[en]'s own extra pins an old spacy/thinc/blis chain that fails to
  # build on Python 3.13 (confirmed still true), so these are declared loose
  # here instead and left for pip to resolve modern prebuilt wheels for.
  # Two of these must be the exact packages misaki's own [en] extra would
  # have pulled in, not generic equivalents: misaki>=0.9's espeak.py imports
  # espeakng-loader unconditionally and calls a phonemizer-fork-only API
  # (EspeakWrapper.set_data_path) -- plain `phonemizer` (no "-fork") lacks
  # that method and fails at import time.
  "misaki",
  "spacy",
  "num2words",
  "phonemizer-fork",
  "espeakng-loader",
  "sounddevice>=0.5",
  "numpy>=2.4.6",
  # Real frame-classifying voice activity detection (Google's WebRTC VAD),
  # replacing a naive RMS energy threshold -- this is the single biggest
  # factor in voicemode's listening feeling more reliable than an amplitude
  # cutoff. "-wheels" is a maintained fork with importlib.metadata support
  # (no pkg_resources dependency), matching what voicemode itself uses.
  "webrtcvad-wheels>=2.0.14",
  "pydantic>=2.9",
  "mcp>=1.2",
  "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/michael-L-i/voicebridge"
Issues = "https://github.com/michael-L-i/voicebridge/issues"
Repository = "https://github.com/michael-L-i/voicebridge"

[project.scripts]
voicebridge = "voicebridge.cli:main"
voicebridge-mcp = "voicebridge.mcp.server:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voicebridge*"]
